@@ -9,4 +9,4 @@ require (
 	google.golang.org/appengine v1.6.2 // indirect
 )
 
-go 1.13
+go 1.19
