@@ -1,5 +1,7 @@
 package webo
 
+import "fmt"
+
 type ErrRedirect struct {
 	URL string
 }
@@ -8,6 +10,6 @@ func (e ErrRedirect) Error() string {
 	return e.URL
 }
 
-func Redirect(url string) ErrRedirect {
-	return ErrRedirect{url}
+func Redirect(url string, args ...any) ErrRedirect {
+	return ErrRedirect{fmt.Sprintf(url, args...)}
 }
